# IMU_simulator

./: CMakeLists.txt  README.md  requirements.md
data/: 2023-01-16-15-33-09-imu.csv
src/: IMU.cpp  IMU.h  IMUcsv.cpp  IMUcsv.h  IMUsimulator.cpp  IMUsimulator.h  ReadCSV.cpp  ReadCSV.h  SocketClient.cpp  SocketClient.h  main.cpp
